# miniProjectSourceCode

./: trans.c
Source Code/: Dockerfile.cgi  Dockerfile.rust  README.md  docker-compose.yml
Source Code/backend/: Cargo.toml
Source Code/backend/src/: auth.rs  calculator.rs  cards.rs  db.rs  loans.rs  main.rs  models.rs  profile.rs  services.rs  transfer.rs
Source Code/cgi-bin/: Makefile  activate.c  calculator.c  cards.c  dashboard.c  forgot.c  home.c  loans.c  login.c  logout.c  profile.c  services.c  transactions.c  transfer.c
Source Code/cgi-bin/common/: api_client.c  api_client.h  html_utils.c  html_utils.h  session.c  session.h
Source Code/database/: schema.sql  seed_data.sql
Source Code/docker/: apache-nexusbank.conf
Source Code/frontend/css/: components.css  layout.css  main.css  pages.css
